# fedora-infra-messages

./: .gitignore  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: pull_requests.yml
devel/: Dockerfile  build.sh  tox.sh
docs/: Makefile  generate_json_schema
docs/source/: conf.py  contributing.rst  index.rst  messages.rst
fedora_messaging_infragit/: __init__.py
fedora_messaging_infragit/messages/: __init__.py  receive.py
tests/: __init__.py
tests/messages/: __init__.py  test_receive.py
