[flake8]
show-source = True
max-line-length = 100
# Configure flake8-import-order
application-import-names = fedora_messaging_infragit
import-order-style = pep8


[metadata]
author = Randy Barlow
author_email = bowlofeggs@fedoraproject.org
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
description = Sends fedora messages when commits are made to the Fedora Infrastructure Ansible repository
keywords =
    fedora-messaging
license = GPLv3
long_description = file: README.md, COPYING
name = fedora-messaging-infragit
url = https://github.com/fedora-infra/fedora-messaging-infragit/
version = attr: fedora_messaging_infragit.VERSION


[mypy-fedora_messaging.*]
ignore_missing_imports = True


[mypy-jsonschema.*]
ignore_missing_imports = True


[mypy-pytest.*]
ignore_missing_imports = True


[mypy-setuptools.*]
ignore_missing_imports = True


[options]
include_package_data = True
packages = find:
install_requires =
    fedora-messaging


[options.entry_points]
console_scripts =
    fedora-messaging-infragit-receive = fedora_messaging_infragit.receive:main
fedora.messages =
    infragit.receive.v1 = fedora_messaging_infragit.messages.receive:ReceiveV1


[options.package_data]
* = *.json


[options.packages.find]
exclude =
    tests


[report]
precision = 1
fail_under = 100
show_missing = True


[run]
branch = True
source = fedora_messaging_infragit


[tool:pytest]
addopts = --cov-config setup.cfg --cov=fedora_messaging_infragit --cov-report term
